--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -39,9 +39,9 @@
                 <div id="properties" class="panel-collapse collapse in">
                     <div class="panel-body">
                         <p>
-                            <div class="animation">
+                        <div class="chart" style="width: 100%">
                             <script src="{{ url_for('static', filename='js/d3_plot_temperature.js') }}"></script>
-                            <script>create_graph('5903721', 'temperature')</script>
+                            <script>create_graph('3900735', 'temperature')</script>
                             </div>
                         </p>
                         <p>
