proto - map - tooltips

--- a/BA_argo_proto/webapp/templates/_base.html
+++ b/BA_argo_proto/webapp/templates/_base.html
@@ -11,39 +11,16 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
     <title>Map Viewer (2-column layout)</title>
-    <style type="text/css">
 
-    </style>
-    <script src="https://openlayers.org/en/v4.3.2/build/ol-debug.js"></script>
+    <script src="https://openlayers.org/en/v4.3.2/build/ol.js"></script>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <script src="{{ url_for('static', filename='js/layout_submenu.js') }}"></script>
 
-    <script src="https://d3js.org/d3.v3.min.js"></script>
 
-    <style> /* set the CSS */
 
-    body {
-        font: 12px Arial;
-    }
-
-    path {
-        stroke: red;
-        stroke-width: 2;
-        fill: none;
-    }
-
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: grey;
-        stroke-width: 1;
-        shape-rendering: crispEdges;
-    }
-
-    </style>
 
 </head>
 <body>
