--- a/BA_argo_proto/webapp/static/css/samples.css
+++ b/BA_argo_proto/webapp/static/css/samples.css
@@ -176,3 +176,23 @@ body {
     cursor: pointer;
 }
 
+#info {
+    position: absolute;
+    height: 1px;
+    width: 1px;
+    z-index: 100;
+}
+
+.tooltip.in {
+    opacity: 1;
+    filter: alpha(opacity=75);
+}
+
+.tooltip.top .tooltip-arrow {
+    border-top-color: white;
+}
+
+.tooltip-inner {
+    border: 2px solid black;
+}
+
