--- a/BA_argo_proto/webapp/templates/_render_map.html
+++ b/BA_argo_proto/webapp/templates/_render_map.html
@@ -1,3 +1,5 @@
-<div id="map"></div>
+<div id="map">
+    <div id="info"></div>
+</div>
 
 <script src="{{ url_for('static', filename='js/openlayers_map.js') }}"></script>
