proto - map - Plot Graphen mit clickevent

--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -38,7 +38,9 @@
                 </div>
                 <div id="properties" class="panel-collapse collapse in">
                     <div class="panel-body">
-                        <img src="{{ url_for('argo_app.deliver_chart', identifier='4900625') }}" style="width: 100%">
+                        <div id="chart-picture" style="width: 100%">
+
+                        </div>
                     </div>
                 </div>
             </div>
