proto - app - position history by click

--- a/BA_argo_proto/webapp/templates/_htw_image.html
+++ b/BA_argo_proto/webapp/templates/_htw_image.html
@@ -1,1 +1,1 @@
-<img src="{{ url_for('static', filename='Q11_HTW_Berlin_Logo_quer_pos_GRUEN_RGB.png') }}" style="height:40px">
+<img src="{{ url_for('static', filename='Q11_HTW_Berlin_Logo_quer_pos_GRUEN_RGB.png') }}" width="100px">
