--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -1,12 +1,12 @@
 <div class="row main-row">
     <div class="col-sm-4 col-md-3 sidebar sidebar-left pull-left">
-        <div class="panel-group sidebar-body" id="accordion-left">
+        <div class="panel-group sidebar-body" id="accordion-left" , style="display: none">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#layers">
                             <i class="fa fa-list-alt"></i>
-                            Layers
+                            Meta Data
                         </a>
                         <span class="pull-right slide-submenu">
                     <i class="fa fa-chevron-left"></i>
@@ -15,15 +15,9 @@
                 </div>
                 <div id="layers" class="panel-collapse collapse in">
                     <div class="panel-body list-group">
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-globe"></i> Argo Float XY
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-globe"></i> Argo Float AB
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-globe"></i> Argo Float FE
-                        </a>
+                        <div id="argo_info">
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -32,7 +26,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#properties">
                             <i class="fa fa-list-alt"></i>
-                            Properties
+                            Meassurements
                         </a>
                     </h4>
                 </div>
@@ -46,7 +40,4 @@
             </div>
         </div>
     </div>
-</div>
-<div class="mini-submenu mini-submenu-left pull-left">
-    <i class="fa fa-list-alt"></i>
 </div>
