--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -4,12 +4,11 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#layers">
-                            <i class="fa fa-list-alt"></i>
-                            Meta Data
+                        <a data-toggle="collapse" href="#layers" id="argo_float_identifier">
+
                         </a>
                         <span class="pull-right slide-submenu">
-                    <i class="fa fa-chevron-left"></i>
+                    <i class="fa fa-close"></i>
                   </span>
                     </h4>
                 </div>
