proto - map - Info-button and interaction from plot to map.

--- a/BA_argo_proto/webapp/templates/_base.html
+++ b/BA_argo_proto/webapp/templates/_base.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <title>Map Viewer (2-column layout)</title>
+    <title>ArgoData</title>
 
     <script src="https://openlayers.org/en/v4.3.2/build/ol.js"></script>
 
