--- a/BA_argo_proto/webapp/templates/_navbar.html
+++ b/BA_argo_proto/webapp/templates/_navbar.html
@@ -10,19 +10,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Argo ProjectViewer</a>
+
+
             </div>
+
+
             <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    {% include '_htw_image.html' %}
-                </li>
-            </ul>
+                <ul class="nav navbar-nav">
+                    <div class="col-md-6" data-toggle="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <div class="navbar-brand">ArgoData</div>
+                        </a>
+                        <ul class="dropdown-menu col-xs-12" style="min-width: 500px">
+                            {% include '_argo_info.html' %}
+                        </ul>
+                    </div>
+                </ul>
 
-        </div><!-- /.navbar-collapse -->
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        {% include '_htw_image.html' %}
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
     </nav>
-</div><!-- /.container-fluid -->
-</nav>
 </div>
 <div class="navbar-offset"></div>
