--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -8,7 +8,7 @@
 
                         </a>
                         <span class="pull-right slide-submenu">
-                    <i class="fa fa-close"></i>
+                    <a onclick="map.removeLayer(positionLayer)"> <i class="fa fa-close" style="color: black"></i> </a>
                   </span>
                     </h4>
                 </div>
