proto - frontend - Better image

--- a/BA_argo_proto/webapp/templates/_navbar.html
+++ b/BA_argo_proto/webapp/templates/_navbar.html
@@ -31,9 +31,10 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        {% include '_htw_image.html' %}
-                    </li>
+                    <a class="navbar-brand" rel="home" href="#" title="ArgoData">
+                        <img src="{{ url_for('static', filename='Q11_HTW_Berlin_Logo_quer_pos_GRUEN_RGB.png') }}"
+                             width="100px">
+                    </a>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
