proto - frontend - Info via bootstrap-modal

--- a/BA_argo_proto/webapp/templates/_argo_info.html
+++ b/BA_argo_proto/webapp/templates/_argo_info.html
@@ -1,12 +1,23 @@
-<p>
-    Das Argo Programm wurde gegründet, um die Auswirkungen des Klimawandels auf die Weltmeere zu untersuchen.
-</p>
-<p>
-    Die dabei gemessenen Daten lassen sich hier betrachten.
-</p>
+<div class="modal" id="appinfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+     style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <b class="modal-title" id="myModalLabel"> Dies ist ein Betrachter für die Daten des Argo Programms.</b>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Jeder Punkt auf der Karte ist eine Messstation. Ein Klick auf die Messstation zeigt die gemessenen
+                    Daten an.
+                </p>
 
-<p>
-    Weitere Informationen zum Argo Program finden sich auf der <a href="http://www.argo.ucsd.edu/">Projektwebseite</a>.
-</p>
+                <p>
+                    Bei Fragen oder Anmerkungen bitte eine email an: <a href="mailto:sebsch@geblubber.org">sebsch@geblubber.org</a>
+                </p>
 
+            </div>
 
+        </div>
+    </div>
+</div>
