--- a/BA_argo_proto/webapp/templates/_navbar.html
+++ b/BA_argo_proto/webapp/templates/_navbar.html
@@ -10,27 +10,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
-
             </div>
-
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav">
-                    <div class="col-md-6" data-toggle="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <div class="navbar-brand">ArgoData</div>
-                        </a>
-                        <ul class="dropdown-menu col-xs-12" style="min-width: 500px">
-                            {% include '_argo_info.html' %}
-                        </ul>
+                    <div class="navbar-brand">
+                        ArgoData <i
+                            class="fa fa-info-circle infoButton2"
+                            data-toggle="modal"
+                            data-target="#appinfo"></i>
                     </div>
                 </ul>
 
-
                 <ul class="nav navbar-nav navbar-right">
+
                     <a class="navbar-brand" rel="home" href="#" title="ArgoData">
                         <img src="{{ url_for('static', filename='Q11_HTW_Berlin_Logo_quer_pos_GRUEN_RGB.png') }}"
                              width="100px">
