proto - frontend - Link to HTW

--- a/BA_argo_proto/webapp/templates/_navbar.html
+++ b/BA_argo_proto/webapp/templates/_navbar.html
@@ -26,7 +26,8 @@
 
                 <ul class="nav navbar-nav navbar-right">
 
-                    <a class="navbar-brand" rel="home" href="#" title="ArgoData">
+                    <a class="navbar-brand" rel="home" href="https://www.htw-berlin.de/" title="ArgoData"
+                       target="_blank">
                         <img src="{{ url_for('static', filename='Q11_HTW_Berlin_Logo_quer_pos_GRUEN_RGB.png') }}"
                              width="100px">
                     </a>
