proto - frontend - Show last seen in infotext

--- a/BA_argo_proto/webapp/templates/_info_text.html
+++ b/BA_argo_proto/webapp/templates/_info_text.html
@@ -23,6 +23,10 @@
             <td>{{ data.launch_date }}</td>
         </tr>
 
+        <tr>
+            <td>Zuletzt gesehen</td>
+            <td>{{ data.last_seen }}</td>
+        </tr>
         </tbody>
     </table>
 
