--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -20,12 +20,12 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default">
+            <div class="panel panel-default" id="panel-charts">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#properties">
+                        <a data-toggle="collapse" href="#properties" id="panel-chart">
                             <i class="fa fa-list-alt"></i>
-                            Meassurements
+                            Messwerte
                         </a>
                     </h4>
                 </div>
