--- a/BA_argo_proto/webapp/templates/_sidebar.html
+++ b/BA_argo_proto/webapp/templates/_sidebar.html
@@ -4,6 +4,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading ">
                     <h4 class="panel-title">
+                        <i class="glyphicon glyphicon-list"></i>
                         <a data-toggle="collapse" href="#layers" id="argo_float_identifier">
 
                         </a>
@@ -14,6 +15,7 @@
                 </div>
                 <div id="layers" class="panel-collapse collapse in">
                     <div class="panel-body list-group">
+
                         <div id="argo_info">
 
                         </div>
@@ -23,10 +25,10 @@
             <div class="panel panel-default" id="panel-charts">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#properties" id="panel-chart">
-                            <i class="fa fa-list-alt"></i>
+                        <div id="panel-chart">
+                            <i class="fa fa-line-chart"></i>
                             Messwerte
-                        </a>
+                        </div>
                     </h4>
                 </div>
                 <div id="properties" class="panel-collapse collapse in ">
