proto - frontend - Licencetext

--- a/BA_argo_proto/webapp/templates/_base.html
+++ b/BA_argo_proto/webapp/templates/_base.html
@@ -19,6 +19,13 @@
 
     <script src="{{ url_for('static', filename='js/layout_submenu.js') }}"></script>
 
+    <!--
+    The Structure of this web page is based of Jackie Ngs 2-Column Layout.
+        - https://github.com/jumpinjackie/bootstrap-viewer-template
+    jumpinjackie/bootstrap-viewer-template is licensed under the MIT License
+        - See: https://raw.githubusercontent.com/jumpinjackie/bootstrap-viewer-template/master/LICENSE
+    -->
+
 
 
 
