--- a/BA_argo_proto/webapp/templates/_argo_info.html
+++ b/BA_argo_proto/webapp/templates/_argo_info.html
@@ -8,12 +8,16 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Jeder Punkt auf der Karte ist eine Messstation. Ein Klick auf die Messstation zeigt die gemessenen
+                    Jeder Punkt auf der Karte ist eine Messboje. Ein Klick auf die Messstation zeigt die gemessenen
                     Daten an.
                 </p>
 
                 <p>
                     Bei Fragen oder Anmerkungen bitte eine email an: <a href="mailto:sebsch@geblubber.org">sebsch@geblubber.org</a>
+                </p>
+
+                <p>
+                    Weitere Informationen zum Argo-Programm findest du <a href="http://www.argo.ucsd.edu/">hier</a>.
                 </p>
 
             </div>
